<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Profile_Card">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="5dp"
        android:background="@drawable/layout_border"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <LinearLayout
            android:id="@+id/first_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/first_Sub_child"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="2">
                <ImageView
                    android:id="@+id/image"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/person"
                    tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_sub_child"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/second_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/num1_pos"
                    style="@style/text_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/num1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/num2_follow"
                    style="@style/text_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="45dp"
                    android:textSize="23sp"
                    android:text="@string/num2"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/num3_follow"
                    style="@style/text_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/num3"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/num1_data"
                    style="@style/text_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="18sp"
                    android:text="@string/num1_details"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/num2_data"
                    style="@style/text_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/num2_details"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/num3_data"
                    style="@style/text_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="0dp"
                    android:text="@string/num3_details"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/des"
            style="@style/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:text="@string/ui_des"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/designer"
            style="@style/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:text="@string/design"
            android:textColor="@color/grey"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/desc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:drawableStart="@drawable/wave"
            android:drawablePadding="7dp"
            tools:ignore="UseCompatTextViewDrawableXml" />
        <TextView
            android:id="@+id/desc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc2"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
          />

        <TextView
            android:id="@+id/last_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc3"
            android:drawableStart="@drawable/mic"
            android:drawablePadding="2dp"
            android:ellipsize="end"
            android:ems="10"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            tools:ignore="UseCompatTextViewDrawableXml" />
        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="10"
            android:textColor="@color/purple_500"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="@string/last_link"
            tools:ignore="UseCompatTextViewDrawableXml" />
        <Button
            android:layout_width="wrap_content"
            android:height="55dp"
            android:backgroundTint="@color/follow_button"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:drawableEnd="@drawable/instagram"
            android:drawablePadding="5dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
</LinearLayout>