<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="370dp"
        android:layout_height="600dp"
        android:layout_marginVertical="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/layout_border"
        android:elevation="30dp"
        android:orientation="vertical"
        tools:ignore="UselessParent,TextSizeCheck">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="20dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="260dp"
                android:layout_height="260dp"
                android:layout_margin="20dp"
                android:src="@drawable/imagepers"
                tools:ignore="ContentDescription" />


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/sub_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosansbold"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/text_pos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosanslight"
                android:text="@string/position"
                android:textColor="@color/gray"
                android:textSize="32sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/min_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phone_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:drawablePadding="24dp"
                android:fontFamily="@font/nunitosansbold"
                android:text="@string/phone"
                android:textColor="@color/gray"
                android:textSize="25sp"
                app:drawableLeftCompat="@drawable/phone" />

            <TextView
                android:id="@+id/mail_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:drawablePadding="22dp"
                android:fontFamily="@font/nunitosansbold"
                android:text="@string/mail"
                android:textColor="@color/gray"
                android:textSize="25sp"
                app:drawableLeftCompat="@drawable/mail" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>